# quick-protobuf

./: Cargo.toml
codegen/: Cargo.toml
codegen/src/: lib.rs  types.rs
pb-rs/src/: types.rs
quick-protobuf/src/: message.rs  reader.rs
src/: errors.rs  into_owned.rs  lib.rs  message.rs  reader.rs
