[package]
name = "quick-protobuf"
description = "A pure Rust protobuf (de)serializer. Quick."
version = "0.6.0"
authors = ["Johann Tuffe <tafia973@gmail.com>"]
keywords = ["protobuf", "parser"]
license = "MIT"
readme = "README.md" 
documentation = "https://docs.rs/quick-protobuf"
repository = "https://github.com/tafia/quick-protobuf"

[dependencies.byteorder]
version = "1.1.0"
optional = true

[dependencies.byteorder_core_io]
git = "https://github.com/lexxvir/byteorder"
branch = "core_io"
default-features = false
features = ["core_io"]
optional = true

[dependencies.core_io]
version = "0.1.20170615"
optional = true

[dev-dependencies]
lazy_static = "0.2.10"

[features]
default = ["std"]
std = ["byteorder"]
collections = []
core_io_collections = ["byteorder_core_io", "core_io", "collections"]
